--- a/styles/style.css
+++ b/styles/style.css
@@ -1,42 +1,52 @@
 html {
     font-size: 10px; /* px means "pixels": the base font size is now 10 pixels high  */
     font-family: 'Noto Sans KR', sans-serif;
-    background-color: darkgrey;
-}
-
-h1 {
-    font-size: 60px;
-    text-align: center;
-    margin: 0;
-    padding: 20px 0;
-    color: white;
-    text-shadow: 3px 3px 1px black;
-}
-
-p, li {
-    font-size: 16px;
-    line-height: 2;
-    letter-spacing: 1px;
-    color: white;
-    text-shadow: 1px 1px 1px black;
+    background-color: white;
 }
 
 body {
-    width: 600px;
-    margin: 0 auto;
-    background-color: red;
-    padding: 0 20px 20px 20px;
-    border: 5px solid black;
+    margin: 0 0 0;
 }
 
-img {
-    display: block;
-    margin: 0 auto;
-    width: 400px;
+nav {
+    background-color: rgb(66, 66, 102);
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+    display: inline;
+    box-shadow: 1px 1px 5px black;
+    padding: 1em;
 }
 
-a {
+h1.navbar {
+    font-size: 20px;
     color: white;
-    font-size: 16px;
-    text-shadow: 1px 1px 1px black;
+    float: left;
+    display: inline;
+    text-align: center;
+    margin: 0px;
+    padding: 0px;
+}
+
+nav div {
+    float: right;
+    padding: 0.5em;
+}
+
+nav a {
+    display: inline;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    font-size: 14px;
+    padding: 0 .5em;
+}
+
+nav a:hover {
+    font-weight: bold;
+}
+
+img.profile {
+    border-radius: 50%;
+    width: 20%;
 }
