--- a/styles/style.css
+++ b/styles/style.css
@@ -8,34 +8,41 @@ body {
     margin: 0 0 0;
 }
 
-nav {
-    background-color: rgb(66, 66, 102);
-    overflow: hidden;
-    position: fixed;
-    width: 100%;
-    display: inline;
-    box-shadow: 1px 1px 5px black;
-    padding: 1em;
+main {
+    padding-top: 65px;
 }
 
-h1.navbar {
+/* --- Navbar Styling --- */
+nav {
+    height: 70px;
+    background: #f7f7f7;
+    box-shadow: 0 0.125rem 0.25rem 0 rgb(0 0 0 / 11%);
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+    padding: 0 1rem;
+}
+
+.navbar-title {
     font-size: 20px;
-    color: white;
+    color: #000000;
     float: left;
     display: inline;
     text-align: center;
     margin: 0px;
-    padding: 0px;
+    padding: 20.5px 0px;
 }
 
-nav div {
+.navbar-items {
     float: right;
-    padding: 0.5em;
+    padding: 25px 0px;
 }
 
 nav a {
     display: inline;
-    color: white;
+    color: #000000;;
     text-align: center;
     text-decoration: none;
     font-size: 14px;
@@ -46,7 +53,156 @@ nav a:hover {
     font-weight: bold;
 }
 
-img.profile {
+/* --- Home/About Styling --- */
+.flex-container {
+    display: flex;
+    text-align: center;
+    padding: 20px;
+}
+
+.flex-child-profile {
+    flex: 1;
+    text-align: center;
+}
+
+.profile-image {
     border-radius: 50%;
-    width: 20%;
+    width: 40%;
+}
+
+.profile-name {
+    font-size: 25px;
+    margin: 0;
+    padding: 0;
+}
+
+.profile-title {
+    font-size: 15px;
+    color: grey;
+    margin: 0;
+    padding: 0;
+}
+
+.profile-organization {
+    font-size: 15px;
+    color: #555555;
+    text-decoration: none;
+    margin: 0;
+    padding: 0;
+}
+
+.profile-organization:hover {
+    font-size: 15px;
+    color: #555555;
+    text-decoration: underline;
+    margin: 0;
+    padding: 0;
+}
+
+.profile-quick-links a {
+    color: #555555;
+    font-size: 25px;
+    padding: 0 2px;
+}
+
+.flex-child-about {
+    flex: 1;
+    text-align: center;
+}
+div.profile {
+    text-align: center;
+    display: block;
+}
+
+.about {
+    padding: 30px 0px;
+    text-align: center;
+}
+
+/* --- Skills Styling --- */
+.skills-container {
+    background-color: #EAF2FA;
+    padding: 20px;
+    text-align: center;
+}
+
+.skills-container h1 {
+    padding: 0;
+    margin: 0;
+    font-size: 30px;
+}
+
+.skills-flex-container {
+    display: flex;
+    text-align: center;
+    padding: 0px;
+}
+
+.flex-child-s1 {
+    flex: 1;
+}
+
+.flex-child-s2 {
+    flex: 1;
+}
+
+.flex-child-s3 {
+    flex: 1;
+}
+
+.skills li{
+    font-size: 20px;
+    color: #555555;
+    flex: 1;
+    list-style: none;
+    padding: 10px;
+}
+
+/* --- Experience Styling --- */
+.experience-container {
+    text-align: center;
+    background-color: white;
+}
+
+.work-experience-container {
+    margin: 0;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+    background-color: #fff;
+}
+
+.card-container {
+    font-family: inherit;
+    font-size: 1rem;
+    line-height: inherit;
+    color: inherit;
+    background-color: #fff;
+    margin-top: 70px;
+    padding-top: 0;
+    counter-reset: captions;
+}
+
+.card {
+    margin-bottom: 1.5rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    background: #fff;
+    box-shadow: 0 2px 4px 0 rgb(0 0 0 / 20%);
+    transition: all .2s ease-out;
+}
+
+.card-body {
+    flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1.25rem;
+}
+
+/* --- Projects Styling --- */
+.projects-container {
+    text-align: center;
+    background-color: #EAF2FA;
+    padding: 20px;
 }
